# rich-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup-tests.sh  test.patch  test.sh
src/rich_cli/: __main__.py  markdown.py  pager.py  win_vt.py
test_data/: mlb_players.csv  notebook.ipynb  test.rst
tests/: test_ansi_preprocessing.py  test_env_vars.py  test_main.py
