[project]
name = "rich-cli"
version = "1.8.0"
description = "Command Line Interface to Rich"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Will McGugan", email = "willmcgugan@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
  "rich>=12.4.0",
  "click>=8.0.0",
  "requests>=2.0.0",
  "textual>=0.1.18",
  "rich-rst>=1.1.7",
]

[project.urls]
homepage = "https://github.com/Textualize/rich-cli"

[project.scripts]
rich = "rich_cli.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
